# telegram_clustering_contest

./: .gitignore  CMakeLists.txt  README.md  deb-packages.txt  tgnews.cpp
assets/: default.cfg  toy.cfg
assets/vocabs/: english_categories.voc  english_day_names.voc  english_month_names.voc  russian_categories.voc  russian_day_names.voc  russian_month_names.voc  top_english_words.voc  top_russian_words.voc
metric/examples/energies_examples/: energies_example.cpp
metric/modules/distance/k-related/: Standards.hpp
metric/modules/mapping/: kmeans.cpp
metric/n-api/crossfilter/: package-lock.json
metric/n-api/metric_search/: package-lock.json
modules/: categories_detector.cpp  categories_detector.hpp  content_parser.cpp  content_parser.hpp  language_detector.cpp  language_detector.hpp  languages.hpp  name_entities_recognizer.cpp  name_entities_recognizer.hpp  news_clusterizer.cpp  news_clusterizer.hpp  news_detector.cpp  news_detector.hpp  news_ranger.cpp  news_ranger.hpp  text_embedding.cpp  text_embedding.hpp
tools/: KMeans_word2vec.cpp  cluster_word2vec.cpp  convert_tags_corpora.cpp  cut_word2vec.cpp  wor2vec_vocab_cutter.cpp
